*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9022 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -583,6 +583,7 @@ matchOrder.options=Opciones
 matchOrder.staminaDiscount=Efecto de Condición
 matchOrder.staminaDiscount.title=Las calificaciones del sector son ajustadas según el aporte de cada jugador a ese sector
 matchOrder.summary=Resumen
+matchOrder.tournamentMatch=Partido de torneo
 
 #Skills
 Playmaking=Jugadas
@@ -1158,6 +1159,7 @@ foxtrick.prefs.loadNotice=Pega tus preferencias guardadas en el cuadro de texto 
 foxtrick.prefs.captionDisableSettings=Deshabilitar Foxtrick
 foxtrick.prefs.stagepref=Desahabilitar Foxtrick en el servidor de Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar Foxtrick temporalmente
+foxtrick.prefs.featureHighlight=Resaltar características de FoxTrick
 foxtrick.prefs.saved=Preferencias Guardadas\!
 foxtrick.prefs.loaded=Preferencias cargadas\!
 foxtrick.prefs.dismissNotice=(clic para descartar este aviso)
@@ -1197,6 +1199,7 @@ revoke_permissions_ask=¿Está seguro que desea revocar todos los permisos opcio
 
 foxtrick.prefs.AdditionalOptions=Opciones Adicionales
 foxtrick.prefs.smallcopyicons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
+foxtrick.prefs.anstoss2icons=Usar los iconos de Anstoss2 para las especialidades
 foxtrick.prefs.DisplayHTMLDebugOutput=Mostrar resultados de la depuración adicional en la página de Hattrick (para desarrolladores)
 
 foxtrick.prefs.permissionsHint=%s necesita autorización para funcionar. Permita el acceso en el siguiente cuadro de dialogo. Si lo deniega esta característica del modulo va a ser deshabilitada.
