*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9038 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -875,6 +875,7 @@ foxtrick.matches.attack=Angriff
 foxtrick.matches.indfreekick=ind. Freistösse
 foxtrick.matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die gewählte Sprache nicht unterstützt wird oder falsch eingestellt wurde. Bitte stell sicher, dass deine FoxTrick-Spracheinstellung mit der Sprache von Hattrick übereinstimmt\!
 
+
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 foxtrick.matches.suppstats=Supporter Statistiken
@@ -1160,6 +1161,7 @@ foxtrick.prefs.loadNotice=Kopiere deine gespeicherten Einstellungen in das Textf
 foxtrick.prefs.captionDisableSettings=FoxTrick deaktivieren
 foxtrick.prefs.stagepref=FoxTrick auf Stage Server deaktivieren
 foxtrick.prefs.disableTemporaryLabel=FoxTrick vorübergehend deaktivieren
+foxtrick.prefs.featureHighlight=Foxtrick-Elemente farblich hervorheben
 foxtrick.prefs.saved=Einstellungen gespeichert\!
 foxtrick.prefs.loaded=Einstellungen geladen\!
 foxtrick.prefs.dismissNotice=(Klicke um diese Notiz zu verbergen)
