--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -31,20 +31,7 @@ foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your fi
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a TeamID link
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a link bar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
-
-
-
-
-
-
-
-
-
-
-
-
-
-foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask \ with additional \, eg \\.)
+foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expressions (Mask  with additional , eg .).
 foxtrick.ForumYouthIcons.symbols.desc=Adds icon for symbols below. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 foxtrick.ForumYouthIcons.tournament.desc=Adds icon for TournamentID
 foxtrick.ForumYouthIcons.tournament_match.desc=Adds icon for TournamentMatchID
@@ -91,13 +78,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after 
 foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
 foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 foxtrick.MatchSimulator.RatingsBelow.desc=Displays prediction below
-
-
-
-
-
-
-foxtrick.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to look less suspicious. Make sure you also disable all other modules that might be risky, especially the "Alert" modules.
+foxtrick.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
 
 # -----------------------------------------------------------------------------
 
@@ -243,6 +224,7 @@ notify.newForumMessage=There is %s new forum reply to you.;There are %s new foru
 #matches
 foxtrick.matches.attackdefensebars=Attack vs Defence
 foxtrick.matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
