*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9042 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Dodati ikonu za YouthMatchID (juniorsk
 foxtrick.ForumYouthIcons.youth_series.desc=Dodati ikonu za YouthSeariesID (juniorska liga)
 foxtrick.ForumYouthIcons.enlarge_input.desc=Povećati prozorčić za unos teksta radi ugodnijeg pisanja
 foxtrick.ForumYouthIcons.pre.desc=Dodati ikonu za Forum 'pre' format (za postanje HTML kodnih oznaka)
-foxtrick.ForumYouthIcons.table.desc=Dodaje ikonu za tablicu. Općeniti tag prihvaća regularne izraze (maska ​​s dodatno, npr..).
+foxtrick.ForumYouthIcons.table.desc=Dodaje ikonu za tablicu.
 foxtrick.ForumYouthIcons.symbols.desc=Dodaje ikonu ispod simbola. Unosi su odvojeni točka-zarezom. Kako biste koristili unesite "/;".
 foxtrick.ForumYouthIcons.debug.desc=Dodaje ikonu za FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Dodaje ikonu za postavke FoxTricka
@@ -259,7 +259,7 @@ foxtrick.NewMail.desc=Istaknuti u slučaju primitka nove pošte
 foxtrick.NewMail.NotifyMail.desc=Prikaži obavijest ako ima novih poruka za vas
 foxtrick.NewMail.NotifyMailSound.desc=Također upozori zvukom
 foxtrick.NewMail.NotifyForum.desc=Prikaži obavijest ako ima novih odgovora na forumu za vas
-foxtrick.NewMail.NotifyForumSound.desc=Također upozori zvukom
+foxtrick.NewMail.NotifyForumSound.desc=Upozori zvukom na odgovor na forumu
 foxtrick.CopyYouth.desc=Kopiraj funkcije za juniorska izvješća
 foxtrick.CopyYouth.TrainingReport.desc=Dodati ikonu za kopiranje izvješća s treninga na stranici juniora
 foxtrick.CopyYouth.ScoutComment.desc=Dodati ikonu za kopiranje skautovog komentara na osobnoj stranici juniorskog igrača
@@ -336,7 +336,7 @@ foxtrick.LocalTime.desc=Prikaži vrijeme u lokalnoj zoni umjesto u Hattrick vrem
 foxtrick.ForumThreadAutoIgnore.desc=Automatski ignoriraj forumske teme s odabranom oznakom (teme s [Tag] ili {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Popis oznaka, npr.\: NT, ideja, Bug. Odvojene zarezom, velika i mala slova.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Popis dopuštenih tema po ID-u (dio prije točke). Teme na bijeloj listi neće biti ignorirane. Odvojene zarezom.
-foxtrick.TableSort.desc=Čini sve prave tablice poredane koji imaju zaglavlje (uključujući tablice u forum skom postanju)
+foxtrick.TableSort.desc=Omogućuje da se tablice sa zaglavljem mogu poredati (uključujući tablice u forumskom postanju)
 foxtrick.LiveAlert.desc=Prikaži obavijesti za HT Live golove
 foxtrick.LiveAlert.Sound.desc=Također upozori zvukom
 foxtrick.OldStyleFace.desc=Pokaži lica u starom Hattrick stilu
@@ -708,7 +708,7 @@ Last_match=Posljednja utakmica
 Last_match.abbr=Utakmica
 Last_stars=Posljednja ocjena
 Last_stars.abbr=Ocj.
-Last_stars_EndOfGame=Zvjezdice na kraju zadnje utakmice
+Last_stars_EndOfGame=Zvjezdice na kraju utakmice
 Last_stars_EndOfGame.abbr=Oc
 Last_stars_decline=Smeđe zvjezdice
 Last_stars_decline.abbr=Raz
@@ -1080,7 +1080,7 @@ button.authorize=Autoriziraj
 button.export=Spremi
 button.import=Učitaj
 button.restoreDefault=Vrati uobičajeno
-button.deleteToken=Obriši znak
+button.deleteToken=Obriši kod
 button.disableAll=Isključi sve
 button.revokePermissions=Opoziv dozvole
 
@@ -1145,7 +1145,7 @@ foxtrick.prefs.setup.country=Podesiti državu
 foxtrick.prefs.captionCleanupBranch=Spremljena podešenja
 foxtrick.prefs.captionLoadSavePrefs=Uvezi/izvezi podešenja
 foxtrick.prefs.labelCleanupBranch=Vrati uobičajene postavke (samo za postavke, ne i za osobna podešenja. Potreban restart)
-foxtrick.prefs.oauth.delete=Brisanje OAuth znaka/tajne za odabranu momčad.
+foxtrick.prefs.oauth.delete=Brisanje OAuth koda za odabranu momčad.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Odnosi se samo na ovaj preglednik. Kako biste u potpunosti ukinuli FoxTrickov pristup momčadi, koristite Hattrick {CHPP upravljanje}.
 foxtrick.prefs.labelDisableAll=Isključi sve opcije
@@ -1153,7 +1153,7 @@ foxtrick.prefs.labelRevokePermissions=Opozvati sve dodatne dozvole (samo Chrome)
 foxtrick.prefs.labelSavePrefs=Izvezi podešenja i/ili osobne postavke
 foxtrick.prefs.labelSavePrefs_Prefs=Osobna podešenja (bilješke, predlošci i vlastiti linkovi)
 foxtrick.prefs.labelSavePrefs_Notes=Osobne postavke (Predlošci, prilagođene veze i prijenos filtera)
-foxtrick.prefs.labelSavePrefs_Token=OAuth znak/tajna
+foxtrick.prefs.labelSavePrefs_Token=OAuth kod
 foxtrick.prefs.saveNotice=Kopiraj sadržaj u prostoru za tekst i spremite kao datoteku, tako da bi mogao uvesti postavke u budućnosti.
 foxtrick.prefs.labelLoadPrefs=Uvezi postavke (Trenutna podešenja mogu biti uklonjena. Potreban restart.)
 foxtrick.prefs.loadNotice=Zalijepite spremljene postavke u prostoru za tekst i pritisnite 'Uvezi' za uvođenje postavki.
@@ -1194,7 +1194,7 @@ prefs.view.by.category=Pogled po kategorijama
 prefs.view.by.page=Pregled po zadnjoj HT stranici
 
 delete_foxtrick_branches_ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati\!
-delete_oauth_ask=Brisanje OAuth znaka / tajne za TeamID %s?
+delete_oauth_ask=Brisanje OAuth koda za TeamID %s?
 disable_all_foxtrick_modules_ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
 revoke_permissions_ask=Jeste li sigurni da želite poništiti sve dozvole?
 
