--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -27,6 +27,7 @@
 <item>● Додата опција за избор иконица за специјалност играча у табу за главна подешавања</item>
 <item>● Означавање Фокстрик додатака пребачено у главна подешавања и у Фокстрик мени</item>
 <item>Нови модул <module>SafeForWork</module> за камуфлирање Хеттрик табова заменом текста и фавикона</item>
+<item>● Велики број превода захваљујући помоћи: aegeansailor, brauxx, Mod-Utku, ebitechv, Polytropos, gkon13, SOLARIS1973, Fieras, margaale, ipefix, stephan.cardot, OmaniMilani, LambdaB, SI-CH, Convincedd, margaale, ljushaff, serjhanti, playMaker, CoRrRan, Aristodemos, margaale, spider007, FeritAkarsu и вероватно смо неког заборавили, пошаљите нам поруку ако вам се нисмо захвалили, тешко је испратити толики број људи који се укључио у превођење. Свака вам част! Хвала вам свима!</item>
 </note>
 
 <note version="0.9.0.4">
