--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -27,6 +27,7 @@
 		<item>● В отчёте о матче теперь показываются значки для всех событий.</item>
 		<item>● Ресурс со ссылками перемещён на другой сервер.</item>
 		<item>● Некоторые внутренние изменения для улучшения совместимости с <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a>.</item>
+		<item>● Огромное количество обновлений переводов (aegeansailor, brauxx, Mod-Utku, ebitechv, Polytropos, gkon13, SOLARIS1973, Fieras, margaale, ipefix, stephan.cardot, OmaniMilani, LambdaB, SI-CH, Convincedd, margaale, ljushaff, serjhanti, playMaker, CoRrRan, Aristodemos, margaale, spider007, FeritAkarsu и, возможно, некоторых пропущенных людей - пожалуйста, 		напишите нам, если чувствуете себя обойдёнными - it's kinda hard to keep tracking all of you guys. Это потрясающе! Огромное спасибо всем вам!</item>
 	</note>
 	
 	<note version="0.9.0.4">
